syntax = "proto3";

option csharp_namespace = "gRPCMiddleWare";

package user;

service UserService {
    rpc getBalanceOfAddress (req) returns (res);
    rpc getTransactionsOfAddress (req) returns (res);
    rpc generateKeyPair (req) returns (res);
}

message req{
    var req = 1;
}
message res{
    var res = 1;
}